--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 APP_NAME=rest
 PORT=8000
-MONGO_CONNECTION_STRING=mongodb://localhost/rest
+MONGO_CONNECTION_STRING=mongodb+srv://shaon:Shaon123Shaon@rest.2dlsk.mongodb.net/test
